Fix: album covers title visibility

--- a/scss/_bscore_custom.scss
+++ b/scss/_bscore_custom.scss
@@ -588,3 +588,11 @@ body {
 #whatsapp-shortcut:hover {
   opacity: 1;
 }
+
+
+/* ======================== */
+/* Gallery Albums Covers    */
+/* ======================== */
+.pgcsimplygalleryblock-albums-title {
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 1);
+}
